Thu Jan  8 11:20:01 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* eval.c, object.c, process.c, re.c: don't use C++ style comments.

Thu Jan  8 08:46:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c (yaml_org_handler): lazy-load Date for
	  static-ext.

Thu Jan  8 07:06:30 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: preserve order in Setup.  [ruby-dev:22503]

	* ext/extmk.rb: move dependent libraries just after depended
	  libraries.

	* ext/digest/*/extconf.rb: depend on digest.

Thu Jan  8 04:36:17 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb (WEBrick::CGI#initialize): should create
	  @config[:Logger] if it was not given.

Wed Jan  7 22:28:12 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): fix memory leak.

Wed Jan  7 21:15:07 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* sample/webrick/*: new files.

	* MANIFEST: add sample/webrick/*

Wed Jan  7 20:51:51 2004  Minero Aoki  <aamine@loveruby.net>

	* test/net/test_httpheader.rb: new file.

	* MANIFEST: add test/net/test_httpheader.rb.

Wed Jan  7 20:42:06 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTPHeader#content_length): should return nil
	  unless header exists. [ruby-dev:22519]

Wed Jan  7 14:26:05 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb (TkPanedWindow): use epath for embedded windows.

	* ext/tk/lib/tktext.rb: use epath for embedded windows.

	* ext/tk/lib/tkcanvas.rb: use epath for window items.

Wed Jan  7 14:24:04 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/{attachment.rb,mimemessage.rb}: added from soap4r/1.5.2.

Wed Jan  7 13:00:18 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/ri/ri_driver.rb: Fix problem where ri was
	  being too eager to find matches of ambiguous method
	  names (such as "ri Thread.join" would return both
	  Thread.join and ThreadsWait.join)

Wed Jan  7 12:35:41 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>
